Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110711

QtWebEngine 6.5 beta 2 fails to build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • None
    • 6.5.0 Beta2
    • WebEngine
    • None
    • Linux/X11
    • 9e1092cef (108-based)

    Description

      ./../../../../../qtwebengine-everywhere-src-6.5.0-beta2/src/3rdparty/chromium/media/filters/h265_to_annex_b_bitstream_converter.cc:273:20: error: ‘kParamSetStartCodeSize’ was not declared in this scope
        273 |   if (bytes_left < kParamSetStartCodeSize ||
            |                    ^~~~~~~~~~~~~~~~~~~~~~ 

      The file has

      static const uint32_t kParamSetStartCodeSize2 = 1 + sizeof(kStartCodePrefix2); 

      But kParamSetStartCodeSize is nowhere defined.

      Attachments

        For Gerrit Dashboard: QTBUG-110711
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            arojas Antonio Rojas
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes