FIXUP: Fixes for jumbo build

Fixes: QTBUG-110711
Change-Id: I4a60dcee8cda3731cbf279f4629c469f8e398f8b
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/456760
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>